--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '2'
 services:
-  kitchen-app:
-    container_name: kitchen-app
+  kitchenapp:
+    container_name: kitchenapp
     build: .
     command: "npm start -- --host=0.0.0.0"
     ports:
       - 4200:4200
       - 49152:49152
     volumes:
-      - .:/home/app/kitchen-app
-      - /home/app/kitchen-app/node_modules
+      - .:/home/app/kitchenapp
+      - /home/app/kitchenapp/node_modules
