--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -3,7 +3,7 @@ services:
   kitchenapp:
     container_name: kitchenapp
     build: .
-    command: "npm build --prod"
+    command: "npm start -- --host=0.0.0.0"
     ports:
       - 4200:4200
       - 49152:49152
