--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,12 +1,4 @@
-
-services:
-  kitchenapp:
-    container_name: kitchenapp
-    build: .
-    command: "npm start -- --host=0.0.0.0"
-    ports:
-      - 4200:4200
-      - 49152:49152
-    volumes:
-      - .:/home/app/kitchenapp
-      - /home/app/kitchenapp/node_modules
+kitchenapp:
+  build:
+    image: codeship/kitchenapp
+    dockerfile_path: Dockerfile
