changed service name in steps

--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -2,6 +2,6 @@
   service: kitchenapp
   command: ng build --prod
 
-- service: startproject
+- service: kitchenapp
   type: push
   command: /deploy/git_push.sh
