changes to kitcenapp

--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -3,4 +3,8 @@ kitchenapp:
     image: codeship/kitchenapp
     dockerfile_path: Dockerfile
 
-
+push:
+  image: codeship/kitchenapp
+  env_file: deployment.env
+  volumes:
+    - ./:/deploy
